the basics are all there.

--- a/src/TGGDRTFN/Pages/Home.razor
+++ b/src/TGGDRTFN/Pages/Home.razor
@@ -13,6 +13,18 @@
 		</tr>
 	}
 </table>
+<audio id="Take" src="sfx/Take.wav"></audio>
+<audio id="Eat" src="sfx/Eat.wav"></audio>
+<audio id="WooHoo" src="sfx/WooHoo.wav"></audio>
+<audio id="Shucks" src="sfx/Shucks.wav"></audio>
+<audio id="Yoink" src="sfx/Yoink.wav"></audio>
+<audio id="Tasty" src="sfx/Tasty.wav"></audio>
+<audio id="EnemyHit" src="sfx/EnemyHit.wav"></audio>
+<audio id="EnemyMiss" src="sfx/EnemyMiss.wav"></audio>
+<audio id="EnemyDeath" src="sfx/EnemyDeath.wav"></audio>
+<audio id="PlayerHit" src="sfx/PlayerHit.wav"></audio>
+<audio id="PlayerMiss" src="sfx/PlayerMiss.wav"></audio>
+<audio id="PlayerDeath" src="sfx/PlayerDeath.wav"></audio>
 @code{
 	IUIContext context = new UIContext(CHARACTER_COLUMNS, CHARACTER_ROWS, FrameBuffer);
 	const int CHARACTER_COLUMNS = 40;
